--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential
 
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+
       - name: Run tests
         run: cargo test --verbose
         env:
@@ -110,6 +115,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential
+
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
 
       - name: Build project
         run: cargo build --verbose --release
