--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ alloy = { version = "1.0.20", features = [
 jsonrpsee = { version = "0.21", features = ["server", "macros"] }
 
 starknet = "0.16.0"
+reqwest = { version = "0.11", features = ["json"] }
 
 # HTTP and async
 axum = "0.7"
