Do not use verbose in tests ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
           version: nightly
 
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test 
         env:
           RUST_LOG: debug
 
