--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,3 +59,8 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # Time
 chrono = { version = "0.4", features = ["serde"] }
 
+[dev-dependencies]
+# Testing
+tempfile = "3.0"
+serial_test = "3.0"
+
